--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-hacker
-title: "U2Fi: Towards U2F over WiFi"
+title: "None of My Pixel is Your Business: Active Watermarking Cancellation Against Video Streaming Service"
